--- a/index.html
+++ b/index.html
@@ -2,5 +2,10 @@
 <head><title>Upskill Easy!</title></head>
 <body>
 <h1>Welcome to Upskill Easy!</h1>
+  <div id="menu>
+    <a href="jenkins/lab01/lab01.html">Jenkins Lab-01</a>
+    &nbsp;|&nbsp;
+    <a href="jenkins/lab02/lab02.html">Jenkins Lab-02</a>
+  </div>
 </body>
 </html>
