--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
-<head><title>Upskill Easy!</title></head>
-<body>
-<h1>Welcome to Upskill Easy!</h1>
-  <div id="menu>
-    <a href="jenkins/lab01/lab01.html">Jenkins Lab-01</a>
-    &nbsp;|&nbsp;
-    <a href="jenkins/lab02/lab02.html">Jenkins Lab-02</a>
-  </div>
-</body>
+  <head><title>Upskill Easy!</title></head>
+  <body>
+    <h1>Welcome to Upskill Easy!</h1>
+    <dl>
+      <dt>Jenkins</dt>
+      <dd>- <a href="jenkins/lab01/lab01.html">Jenkins Lab-01</a></dd>
+      <dd>- <a href="jenkins/lab02/lab02.html">Jenkins Lab-02</a></dd>
+    </dl>
+  </body>
 </html>
