--- a/index.html
+++ b/index.html
@@ -3,9 +3,39 @@
   <body>
     <h1>Welcome to Upskill Easy!</h1>
     <dl>
+      <dt>Git</dt>
+      <dd>- <a href="git/lab01/lab01.html">Lab-01</a></dd>
+      <dd>- <a href="git/lab02/lab02.html">Lab-02</a></dd>
+    </dl>
+    <dl>
+      <dt>Docker</dt>
+      <dd>- <a href="docker/lab01/lab01.html">Lab-01</a></dd>
+      <dd>- <a href="docker/lab02/lab02.html">Lab-02</a></dd>
+    </dl>
+    <dl>
       <dt>Jenkins</dt>
-      <dd>- <a href="jenkins/lab01/lab01.html">Jenkins Lab-01</a></dd>
-      <dd>- <a href="jenkins/lab02/lab02.html">Jenkins Lab-02</a></dd>
+      <dd>- <a href="jenkins/lab01/lab01.html">Lab-01</a></dd>
+      <dd>- <a href="jenkins/lab02/lab02.html">Lab-02</a></dd>
+    </dl>
+    <dl>
+      <dt>Basic Cloud - AWS</dt>
+      <dd>- <a href="aws/lab01/lab01.html">Lab-01</a></dd>
+      <dd>- <a href="aws/lab02/lab02.html">Lab-02</a></dd>
+    </dl>
+    <dl>
+      <dt>Ansible</dt>
+      <dd>- <a href="ansible/lab01/lab01.html">Lab-01</a></dd>
+      <dd>- <a href="ansible/lab02/lab02.html">Lab-02</a></dd>
+    </dl>
+    <dl>
+      <dt>Terraform</dt>
+      <dd>- <a href="terraform/lab01/lab01.html">Lab-01</a></dd>
+      <dd>- <a href="terraform/lab02/lab02.html">Lab-02</a></dd>
+    </dl>
+    <dl>
+      <dt>Nagios</dt>
+      <dd>- <a href="nagios/lab01/lab01.html">Lab-01</a></dd>
+      <dd>- <a href="nagios/lab02/lab02.html">Lab-02</a></dd>
     </dl>
   </body>
 </html>
